# diffPD_sim2real

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  environment.yml  install.sh
cpp/: CMakeLists.txt  main.cpp
cpp/core/: common.cpp  common.h  exception_with_call_stack.cpp  exception_with_call_stack.h  file_helper.cpp  file_helper.h
cpp/core/include/common/: common.h  config.h  exception_with_call_stack.h  file_helper.h  geometry.h
cpp/core/include/fem/: deformable.h  gravitational_state_force.h  hydrodynamics_state_force.h  planar_collision_state_force.h  rotating_deformable.h  rotating_deformable_3d.h  state_force.h
cpp/core/include/friction/: frictional_boundary.h  planar_frictional_boundary.h
cpp/core/include/material/: corotated.h  corotated_pd.h  linear.h  material.h
cpp/core/include/mesh/: mesh.h  quad_mesh.h
cpp/core/include/pd_energy/: corotated_pd_element_energy.h  pd_element_energy.h  pd_energy.h  pd_muscle_energy.h  planar_collision_pd_energy.h  volume_pd_element_energy.h
cpp/core/include/solver/: pardiso_solver.h
cpp/core/src/: py_diff_pd_core.i
cpp/core/src/common/: common.cpp  file_helper.cpp  geometry.cpp
cpp/core/src/fem/: deformable.cpp  deformable_actuation.cpp  deformable_friction.cpp  deformable_newton.cpp  deformable_newton_backward.cpp  deformable_newton_forward.cpp  deformable_pd_energy.cpp  deformable_projective_dynamics.cpp  deformable_projective_dynamics_backward.cpp  deformable_projective_dynamics_forward.cpp  deformable_quasi_static.cpp  deformable_semi_implicit.cpp  deformable_state_force.cpp  state_force.cpp  (+5 more)
(+324 files in other folders)
